--- a/SS.Parser/SS.Parser.csproj
+++ b/SS.Parser/SS.Parser.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
@@ -9,7 +8,10 @@
 
     <ItemGroup>
       <ProjectReference Include="..\SS.Data\SS.Data.csproj" />
-      <ProjectReference Include="..\SS.Parser\SS.Parser.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="HtmlAgilityPack" Version="1.12.4" />
     </ItemGroup>
 
 </Project>
