--- a/SS.Telegram/SS.Telegram.csproj
+++ b/SS.Telegram/SS.Telegram.csproj
@@ -10,7 +10,9 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.9" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0-rc.2.25502.107" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.9" />
+      <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.0-rc.2.25502.107" />
       <PackageReference Include="Telegram.Bot" Version="22.7.2" />
     </ItemGroup>
 
