--- a/consoletest/consoletest.csproj
+++ b/consoletest/consoletest.csproj
@@ -12,4 +12,11 @@
       <ProjectReference Include="..\SS.Parser\SS.Parser.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0-rc.2.25502.107" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0-rc.2.25502.107" />
+      <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.0-rc.2.25502.107" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.0-rc.2.25502.107" />
+    </ItemGroup>
+
 </Project>
