--- a/SS.Telegram/SS.Telegram.csproj
+++ b/SS.Telegram/SS.Telegram.csproj
@@ -16,4 +16,9 @@
       <PackageReference Include="Telegram.Bot" Version="22.7.2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\SS.Data\SS.Data.csproj" />
+      <ProjectReference Include="..\SS.Parser\SS.Parser.csproj" />
+    </ItemGroup>
+
 </Project>
