--- a/SS.Telegram/SS.Telegram.csproj
+++ b/SS.Telegram/SS.Telegram.csproj
@@ -6,7 +6,12 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
       <UserSecretsId>d37f3090-2749-44f6-8e8c-0dd67383698f</UserSecretsId>
+      <ApplicationIcon>flats--rent.ico</ApplicationIcon>
   </PropertyGroup>
+
+    <ItemGroup>
+      <Content Include="flats--rent.ico" />
+    </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.9" />
