--- a/SS.Telegram/SS.Telegram.csproj
+++ b/SS.Telegram/SS.Telegram.csproj
@@ -7,6 +7,7 @@
         <Nullable>enable</Nullable>
       <UserSecretsId>d37f3090-2749-44f6-8e8c-0dd67383698f</UserSecretsId>
       <ApplicationIcon>flats--rent.ico</ApplicationIcon>
+      <Version>1.0.1</Version>
   </PropertyGroup>
 
     <ItemGroup>
