--- a/SS.Notifier/SS.Notifier.csproj
+++ b/SS.Notifier/SS.Notifier.csproj
@@ -5,6 +5,7 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
@@ -17,7 +18,6 @@
       </PackageReference>
       <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="9.0.11" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.11" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.11" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.11">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -28,6 +28,13 @@
       <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.11" />
       <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="9.0.11" />
       <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.11" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
     </ItemGroup>
 
 </Project>
