--- a/SS.Notifier/SS.Notifier.csproj
+++ b/SS.Notifier/SS.Notifier.csproj
@@ -37,4 +37,9 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\SS.Data\SS.Data.csproj" />
+      <ProjectReference Include="..\SS.Parser\SS.Parser.csproj" />
+    </ItemGroup>
+
 </Project>
