--- a/SS.Parser/SS.Parser.csproj
+++ b/SS.Parser/SS.Parser.csproj
@@ -12,8 +12,8 @@
 
     <ItemGroup>
       <PackageReference Include="HtmlAgilityPack" Version="1.12.4" />
-      <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.0-rc.2.25502.107" />
-      <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.0-rc.2.25502.107" />
+      <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.11" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.11" />
     </ItemGroup>
 
 </Project>
