--- a/SS.Notifier/appsettings.json
+++ b/SS.Notifier/appsettings.json
@@ -2,5 +2,31 @@
   "chats": {
     "plyavnieki": -1002936997275,
     "purvciems": -1002936997275
+  },
+  "Serilog": {
+    "Using": [
+      "Serilog.Sinks.Console"
+    ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext"
+    ],
+    "Properties": {
+      "Application": "SS.Notifier"
+    }
   }
 }
