Telegram: simple message layout

--- a/SS.Notifier/appsettings.json
+++ b/SS.Notifier/appsettings.json
@@ -8,10 +8,11 @@
       "Serilog.Sinks.Console"
     ],
     "MinimumLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning"
+        "Microsoft": "Debug",
+        "System": "Debug",
+        "Telegram.Bot": "Debug"
       }
     },
     "WriteTo": [
