--- a/SS.Notifier/SS.Notifier.csproj
+++ b/SS.Notifier/SS.Notifier.csproj
@@ -33,6 +33,7 @@
       <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
       <PackageReference Include="Serilog.Settings.Configuration" Version="9.0.1-dev-02319" />
       <PackageReference Include="Serilog.Sinks.Console" Version="6.1.1" />
+      <PackageReference Include="Telegram.Bot" Version="22.7.2" />
     </ItemGroup>
 
     <ItemGroup>
