--- a/SS.Notifier/appsettings.json
+++ b/SS.Notifier/appsettings.json
@@ -1,7 +1,20 @@
 ﻿{
-  "chats": {
+  "Chats": {
     "plyavnieki": -1002936997275,
-    "purvciems": -1002936997275
+    "purvciems": -1002936997275,
+    "darzciems": -1002936997275
+  },
+  "Filter": {
+    "MinPrice": 100,
+    "MaxPrice": 400,
+    "MinArea": 30,
+    "MaxArea": 70,
+    "Rooms": [
+      2
+    ]
+  },
+  "ConnectionStrings": {
+    "Postgres": "Host=db;Database=notifierdb;Username=appuser;Password=SuperSecret123!"
   },
   "Serilog": {
     "Using": [
@@ -10,16 +23,16 @@
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
-        "Microsoft": "Debug",
-        "System": "Debug",
-        "Telegram.Bot": "Debug"
+        "Microsoft": "Warning",
+        "System": "Warning",
+        "Telegram.Bot": "Warning"
       }
     },
     "WriteTo": [
       {
         "Name": "Console",
         "Args": {
-          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] [{SourceContext}] {Message:lj}{NewLine}{Exception}"
         }
       }
     ],
