--- a/SS.Notifier/SS.Notifier.csproj
+++ b/SS.Notifier/SS.Notifier.csproj
@@ -25,7 +25,7 @@
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.11" />
       <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.11" />
       <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.11" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.11" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.0-rc.2.25502.107" />
       <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="9.0.11" />
       <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.11" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
