Debug hosted service: chat. Update fix

--- a/SS.Notifier/appsettings.json
+++ b/SS.Notifier/appsettings.json
@@ -1,8 +1,13 @@
 ﻿{
-  "Chats": {
-    "plyavnieki": -1002936997275,
-    "purvciems": -1002936997275,
-    "darzciems": -1002936997275
+  "Telegram": {
+    "Chat": -1002936997275,
+    "Threads": {
+      "plyavnieki": 72,
+      "purvciems": 3,
+      "darzciems": 59,
+      "kengarags": 78,
+      "centre": 75
+    }
   },
   "Filter": {
     "MinPrice": 100,
